# Tour-and-Travel-Web-Application

./: .gitignore  README.md  package-lock.json  package.json
AgenticAi/: agent.py  main.py  pyproject.toml  requirements.txt  tools.py
backend/: Dockerfile  docker-compose.yml  pom.xml
backend/src/main/java/trippy/backend/aws/: EmailService.java  Scheduler.java  SqsConsumer.java  SqsProducer.java
backend/src/main/java/trippy/backend/config/: CorsConfig.java  JwtFilter.java  JwtUtil.java  SecurityConfig.java  awsConfig.java
backend/src/main/java/trippy/backend/controller/: AuthController.java  BookingController.java  ContactController.java  DestinationController.java
backend/src/main/java/trippy/backend/dto/: AuthRequest.java  AuthResponse.java  BookingRequest.java
backend/src/main/java/trippy/backend/exception/: CustomException.java  GlobalExceptionHandler.java
backend/src/main/java/trippy/backend/model/: Booking.java  Contact.java  Destination.java  User.java
backend/src/main/java/trippy/backend/repository/: BookingRepository.java  ContactRepository.java  DestinationRepository.java  UserRepository.java
backend/src/main/java/trippy/backend/service/: AuthService.java  BookingService.java  ContactService.java  (+1 more)
backend/src/main/resources/: application.properties
backend/src/test/java/trippy/backend/: BackendApplicationTests.java
public/: index.html
src/: App.js  BookingForm.js  Destination.js  Signup.js  api.js  index.js
src/components/: ChatWidget.jsx  ContactForm.js  DestinationForm.js  Dstyles.css  Form.css  Form.js  LoginForm.js  SignupForm.js
